-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.14.0, Lustre 2.15.0
-
None
-
3
-
9223372036854775807
There are a number of obdfilter parameter files that report an error even when they are read, which is confusing for the users:
# lctl get_param obdfilter.*.* [225584.240206] ofd: 'obdfilter.*.read_cache_enabled' is deprecated, use 'osd-*.read_cache_enabled' instead [225584.240244] ofd: 'obdfilter.*.readcache_max_filesize' is deprecated, use 'osd-*.readcache_max_filesize' instead [225584.240446] ofd: 'obdfilter.*.sync_on_lock_cancel' is deprecated, use 'obdfilter.*.sync_lock_cancel' instead [225584.240652] ofd: 'obdfilter.*.writethrough_cache_enabled' is deprecated, use 'osd-*.writethrough_cache_enabled' instead
It should only print an error if the parameters are actually written.
Several of these parameters are slated for removal in 2.15, but since the deprecation warning was only added in 2.12.53 and not backported, and there has not been an LTS release since then, it would be better to bump the removal to 2.16 so at least the 2.15 LTS release includes the warning message.